--- a/app/src/main/res/menu/measurement_menu.xml
+++ b/app/src/main/res/menu/measurement_menu.xml
@@ -9,4 +9,8 @@
     <item android:id="@+id/imperial_item"
         android:title="@string/imperial_item"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/information_item"
+        android:title="@string/info_item"
+        app:showAsAction="never"/>
 </menu>
