Made bmi value clickable and added coresponding activity.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="space_large">20dp</dimen>
     <dimen name="input_tv">50dp</dimen>
     <dimen name="bmi_text_size">24sp</dimen>
+    <dimen name="bmi_info_size">24sp</dimen>
 </resources>
