Added ViewModel, fixed mainActivity being destroyed, added 10 last measurements activity, added sharedPreferances.

--- a/app/src/main/res/menu/measurement_menu.xml
+++ b/app/src/main/res/menu/measurement_menu.xml
@@ -13,4 +13,8 @@
     <item android:id="@+id/information_item"
         android:title="@string/info_item"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/last_measurements_item"
+        android:title="@string/last_meas_item"
+        app:showAsAction="never"/>
 </menu>
